--- a/semantic_solr.ipynb
+++ b/semantic_solr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1edcba71968f81b715a8a4edddff4ff4150f72074282e6d0dd20881b1091d8af"
+  "signature": "sha256:3daa3f6f2d9d864fcbfc9281d15bcb3c3a57e12156eac9cab32be68a7dd81e0e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -524,7 +524,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -534,7 +535,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "18275"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -544,7 +555,78 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "[(0,\n",
+        "  {0: 1,\n",
+        "   1: 2,\n",
+        "   2: 4,\n",
+        "   3: 1,\n",
+        "   4: 4,\n",
+        "   5: 1,\n",
+        "   6: 2,\n",
+        "   7: 1,\n",
+        "   8: 2,\n",
+        "   9: 1,\n",
+        "   10: 1,\n",
+        "   11: 1,\n",
+        "   12: 2,\n",
+        "   13: 1,\n",
+        "   14: 1,\n",
+        "   15: 1,\n",
+        "   16: 1,\n",
+        "   17: 1,\n",
+        "   18: 1,\n",
+        "   19: 1,\n",
+        "   20: 1,\n",
+        "   21: 1,\n",
+        "   22: 2,\n",
+        "   23: 1,\n",
+        "   24: 1}),\n",
+        " (1,\n",
+        "  {2: 3,\n",
+        "   4: 2,\n",
+        "   10: 1,\n",
+        "   25: 1,\n",
+        "   26: 1,\n",
+        "   27: 1,\n",
+        "   28: 1,\n",
+        "   29: 1,\n",
+        "   30: 1,\n",
+        "   31: 1,\n",
+        "   32: 1,\n",
+        "   33: 1,\n",
+        "   34: 1,\n",
+        "   35: 2,\n",
+        "   36: 1,\n",
+        "   37: 1,\n",
+        "   38: 1,\n",
+        "   39: 1,\n",
+        "   40: 1,\n",
+        "   41: 1,\n",
+        "   42: 3,\n",
+        "   43: 2,\n",
+        "   44: 1,\n",
+        "   45: 2,\n",
+        "   46: 1,\n",
+        "   47: 1,\n",
+        "   48: 1,\n",
+        "   49: 2,\n",
+        "   50: 2,\n",
+        "   51: 1,\n",
+        "   52: 1,\n",
+        "   53: 1,\n",
+        "   54: 2,\n",
+        "   55: 1,\n",
+        "   56: 1})]"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -561,7 +643,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "[(u'fawn', 32842),\n",
+        " (u'circuitri', 8472),\n",
+        " (u'fawk', 7547),\n",
+        " (u'woodi', 19804),\n",
+        " (u'tilton', 9967),\n",
+        " (u'berlinghoff', 26030),\n",
+        " (u'suzann', 3615),\n",
+        " (u'bedknob', 15118),\n",
+        " (u'17.01.2009', 32771),\n",
+        " (u'hogswatch', 30041)]"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -578,7 +679,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "[(u'20057', 17106),\n",
+        " (u'3480', 7222),\n",
+        " (u'19719', 16802),\n",
+        " (u'21094', 18051),\n",
+        " (u'20051', 17100),\n",
+        " (u'11542', 1448),\n",
+        " (u'11543', 1449),\n",
+        " (u'11540', 1446),\n",
+        " (u'11541', 1447),\n",
+        " (u'11546', 1452)]"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -595,7 +715,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "<35748x18275 sparse matrix of type '<type 'numpy.int64'>'\n",
+        "\twith 715013 stored elements in Compressed Sparse Column format>"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -612,7 +743,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -629,7 +761,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 33,
+       "text": [
+        "(150, 35748)"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -646,7 +788,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "(150,)"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
@@ -663,7 +815,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "(150, 18275)"
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -680,7 +842,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "(35748, 150)"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -690,7 +862,29 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "array([[  4.13881548e+00,  -1.04423245e+01,  -5.07307185e+00, ...,\n",
+        "         -1.02975914e+00,  -1.42660867e+00,  -8.33641325e-01],\n",
+        "       [  2.27347405e-01,  -2.46971955e+01,  -7.38614076e+00, ...,\n",
+        "         -2.57424150e-01,  -8.46157557e-01,  -1.11337387e+00],\n",
+        "       [  1.12191076e-03,  -1.03868853e-01,  -4.31928249e-02, ...,\n",
+        "         -1.11876086e-02,  -7.58574198e-02,  -1.87460110e-02],\n",
+        "       ..., \n",
+        "       [  3.94677169e-02,  -3.97104729e+00,  -1.52459519e+00, ...,\n",
+        "          6.84723769e-02,  -4.79641674e-01,  -2.84436467e-01],\n",
+        "       [  2.34394456e+00,  -3.21919551e+01,  -1.21626137e+01, ...,\n",
+        "          1.09635267e+00,  -2.59567282e-01,   1.16638997e+00],\n",
+        "       [  4.60777664e-02,  -4.75430054e+00,  -1.90324885e+00, ...,\n",
+        "          5.12692088e-01,   3.06496637e-01,   4.46819623e-01]])"
+       ]
+      }
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -707,7 +901,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 38,
+       "text": [
+        "[u'call', u'film', u'secret', u'live', u'plan']"
+       ]
+      }
+     ],
+     "prompt_number": 38
     },
     {
      "cell_type": "markdown",
@@ -724,7 +928,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -734,7 +939,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 40,
+       "text": [
+        "(35748,)"
+       ]
+      }
+     ],
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -744,7 +959,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "array([-0.19465188, -0.04007188,  0.00315176, ..., -0.00036164,\n",
+        "       -0.00036164, -0.00111533])"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -754,7 +980,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -764,7 +991,23 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "array([   11,    34,    41,    57,    59,   143,   196,   222,   233,\n",
+        "         281,   286,   319,   325,   344,   394,   448,   494,   544,\n",
+        "         580,   634,   727,   762,   770,   784,   786,   792,   795,\n",
+        "         798,   807,   824,   968,  1010,  1122,  1162,  1233,  1608,\n",
+        "        1653,  1686,  1914,  2139,  2141,  2208,  2218,  2444,  2451,\n",
+        "        2486,  3152,  3523,  3722,  4184,  6357,  6369,  7006,  9108,\n",
+        "        9214, 15422])"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -774,7 +1017,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -784,7 +1028,36 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 45,
+       "text": [
+        "[u'call',\n",
+        " u'film',\n",
+        " u'secret',\n",
+        " u'live',\n",
+        " u'plan',\n",
+        " u'refer',\n",
+        " u'matter',\n",
+        " u'star',\n",
+        " u'person',\n",
+        " u'reason',\n",
+        " u'rule',\n",
+        " u'form',\n",
+        " u'side',\n",
+        " u'luca',\n",
+        " u'doctor',\n",
+        " u'read',\n",
+        " u'master',\n",
+        " u'lord',\n",
+        " u'weapon',\n",
+        " u'jame']"
+       ]
+      }
+     ],
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -801,7 +1074,36 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 46,
+       "text": [
+        "[u'harri',\n",
+        " u'potter',\n",
+        " u'voldemort',\n",
+        " u'wizard',\n",
+        " u'snape',\n",
+        " u'death',\n",
+        " u'magic',\n",
+        " u'jame',\n",
+        " u'love',\n",
+        " u'spell',\n",
+        " u'time',\n",
+        " u'rowl',\n",
+        " u'eater',\n",
+        " u'lili',\n",
+        " u'travel',\n",
+        " u'seri',\n",
+        " u'hous',\n",
+        " u'hand',\n",
+        " u'hogwart',\n",
+        " u'three']"
+       ]
+      }
+     ],
+     "prompt_number": 46
     },
     {
      "cell_type": "markdown",
@@ -820,17 +1122,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "strength_and_indices = sorted( zip(numpy.dot(uP[termDict[token]],u),range(len(uP))) , reverse=True )"
+      "strength_and_indices = sorted( zip(numpy.dot(uP[termDict['potter']],u),range(len(uP))) , reverse=True )"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -840,7 +1144,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 50,
+       "text": [
+        "1162"
+       ]
+      }
+     ],
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
@@ -850,7 +1164,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 51,
+       "text": [
+        "(35748, 150)"
+       ]
+      }
+     ],
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -860,7 +1184,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 52,
+       "text": [
+        "(150, 35748)"
+       ]
+      }
+     ],
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
@@ -870,7 +1204,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 53,
+       "text": [
+        "(35748,)"
+       ]
+      }
+     ],
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
@@ -880,7 +1224,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -890,7 +1235,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 55,
+       "text": [
+        "[(16.647551751760037, 1168),\n",
+        " (7.8745213744589524, 1162),\n",
+        " (5.7496677486627004, 1396),\n",
+        " (4.9897869758662328, 1156),\n",
+        " (3.9837886456370151, 2413),\n",
+        " (3.7192422677169574, 446),\n",
+        " (3.6300472211962447, 698),\n",
+        " (3.3548897440497609, 634),\n",
+        " (3.2545176051565932, 1026),\n",
+        " (3.1914878222287304, 693)]"
+       ]
+      }
+     ],
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
@@ -900,7 +1264,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -910,7 +1275,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 57,
+       "text": [
+        "[u'harri', u'potter', u'voldemort', u'wizard', u'snape']"
+       ]
+      }
+     ],
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -920,7 +1295,21 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 58,
+       "text": [
+        "[(16.647551751760037, 1168),\n",
+        " (7.8745213744589524, 1162),\n",
+        " (5.7496677486627004, 1396),\n",
+        " (4.9897869758662328, 1156),\n",
+        " (3.9837886456370151, 2413)]"
+       ]
+      }
+     ],
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
@@ -928,7 +1317,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
